--- a/package.json
+++ b/package.json
@@ -21,53 +21,54 @@
         "@capacitor-community/firebase-analytics": "^5.0.1",
         "@capacitor-firebase/app": "^5.0.0",
         "@capacitor-firebase/authentication": "^5.0.0",
-        "@capacitor/android": "5.0.5",
-        "@capacitor/app": "5.0.3",
-        "@capacitor/camera": "^5.0.4",
-        "@capacitor/core": "5.0.5",
-        "@capacitor/filesystem": "^5.0.4",
-        "@capacitor/haptics": "5.0.4",
-        "@capacitor/ios": "^5.0.5",
-        "@capacitor/keyboard": "^5.0.4",
-        "@capacitor/status-bar": "^5.0.4",
+        "@capacitor/android": "5.0.4",
+        "@capacitor/app": "5.0.2",
+        "@capacitor/camera": "^5.0.2",
+        "@capacitor/core": "5.0.4",
+        "@capacitor/filesystem": "^5.0.2",
+        "@capacitor/haptics": "5.0.2",
+        "@capacitor/ios": "^5.0.4",
+        "@capacitor/keyboard": "^5.0.2",
+        "@capacitor/status-bar": "^5.0.2",
         "@headlessui/react": "^1.7.15",
-        "@ionic/react": "^7.1.0",
-        "@ionic/react-router": "^7.1.0",
+        "@ionic/react": "^7.0.10",
+        "@ionic/react-router": "^7.0.10",
         "@tailwindcss/forms": "^0.5.3",
-        "@tanstack/react-query": "^4.29.15",
+        "@tanstack/react-query": "^4.29.12",
         "axios": "^1.4.0",
         "capacitor-ios-autofill-save-password": "^1.1.5",
         "chart.js": "^4.3.0",
         "cordova-plugin-purchase": "^11.0.0",
         "date-fns": "^2.30.0",
-        "firebase": "^9.23.0",
+        "firebase": "^9.22.1",
         "ionicons": "^7.1.2",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-router": "5.3.4",
         "react-router-dom": "=5.3.4",
-        "tailwindcss-safe-area": "^0.3.0"
+        "tailwindcss-safe-area": "^0.2.2",
+        "web-vitals": "^3.2.4"
     },
     "devDependencies": {
-        "@capacitor/cli": "5.0.5",
-        "@types/eslint": "^8.40.2",
-        "@types/node": "^18.16.18",
-        "@types/prettier": "^2.7.3",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "^18.2.6",
+        "@capacitor/cli": "5.0.4",
+        "@types/eslint": "^8.40.1",
+        "@types/prettier": "^2.7.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.9",
+        "@typescript-eslint/parser": "^5.59.9",
+        "@types/node": "^18.16.16",
+        "@types/react": "^18.2.8",
+        "@types/react-dom": "^18.2.4",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.60.0",
-        "@typescript-eslint/parser": "^5.60.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
         "autoprefixer": "^10.4.14",
-        "eslint": "^8.43.0",
+        "eslint": "^8.42.0",
         "eslint-config-react-app": "^7.0.1",
         "postcss": "^8.4.24",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
-        "sass": "^1.63.6",
+        "sass": "^1.62.1",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.1.3",
         "vite": "^4.3.9",
