--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,15 +1,4 @@
-def assertDeploymentTarget(installer)
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      # ensure IPHONEOS_DEPLOYMENT_TARGET is at least 13.0
-      deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f
-      should_upgrade = deployment_target < 13.0 && deployment_target != 0.0
-      if should_upgrade
-        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-      end
-    end
-  end
-end
+require_relative '../../node_modules/.pnpm/@capacitor+ios@5.4.0_@capacitor+core@5.4.0/node_modules/@capacitor/ios/scripts/pods_helpers'
 
 platform :ios, '13.0'
 use_frameworks!
@@ -20,19 +9,19 @@ use_frameworks!
 install! 'cocoapods', :disable_input_output_paths => true
 
 def capacitor_pods
-  pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
-  pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
-  pod 'CapacitorCommunityBarcodeScanner', :path => '../../node_modules/@capacitor-community/barcode-scanner'
-  pod 'CapacitorCommunityFirebaseAnalytics', :path => '../../node_modules/@capacitor-community/firebase-analytics'
-  pod 'CapacitorFirebaseApp', :path => '../../node_modules/@capacitor-firebase/app'
-  pod 'CapacitorFirebaseAuthentication', :path => '../../node_modules/@capacitor-firebase/authentication'
-  pod 'CapacitorApp', :path => '../../node_modules/@capacitor/app'
-  pod 'CapacitorCamera', :path => '../../node_modules/@capacitor/camera'
-  pod 'CapacitorFilesystem', :path => '../../node_modules/@capacitor/filesystem'
-  pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
-  pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
-  pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
-  pod 'CapacitorIosAutofillSavePassword', :path => '../../node_modules/capacitor-ios-autofill-save-password'
+  pod 'Capacitor', :path => '../../node_modules/.pnpm/@capacitor+ios@5.4.0_@capacitor+core@5.4.0/node_modules/@capacitor/ios'
+  pod 'CapacitorCordova', :path => '../../node_modules/.pnpm/@capacitor+ios@5.4.0_@capacitor+core@5.4.0/node_modules/@capacitor/ios'
+  pod 'CapacitorCommunityBarcodeScanner', :path => '../../node_modules/.pnpm/@capacitor-community+barcode-scanner@4.0.1_@capacitor+core@5.4.0/node_modules/@capacitor-community/barcode-scanner'
+  pod 'CapacitorCommunityFirebaseAnalytics', :path => '../../node_modules/.pnpm/@capacitor-community+firebase-analytics@5.0.1_@capacitor+core@5.4.0/node_modules/@capacitor-community/firebase-analytics'
+  pod 'CapacitorFirebaseApp', :path => '../../node_modules/.pnpm/@capacitor-firebase+app@5.1.0_@capacitor+core@5.4.0_firebase@10.4.0/node_modules/@capacitor-firebase/app'
+  pod 'CapacitorFirebaseAuthentication', :path => '../../node_modules/.pnpm/@capacitor-firebase+authentication@5.1.0_@capacitor+core@5.4.0_firebase@10.4.0/node_modules/@capacitor-firebase/authentication'
+  pod 'CapacitorApp', :path => '../../node_modules/.pnpm/@capacitor+app@5.0.6_@capacitor+core@5.4.0/node_modules/@capacitor/app'
+  pod 'CapacitorCamera', :path => '../../node_modules/.pnpm/@capacitor+camera@5.0.7_@capacitor+core@5.4.0/node_modules/@capacitor/camera'
+  pod 'CapacitorFilesystem', :path => '../../node_modules/.pnpm/@capacitor+filesystem@5.1.4_@capacitor+core@5.4.0/node_modules/@capacitor/filesystem'
+  pod 'CapacitorHaptics', :path => '../../node_modules/.pnpm/@capacitor+haptics@5.0.6_@capacitor+core@5.4.0/node_modules/@capacitor/haptics'
+  pod 'CapacitorKeyboard', :path => '../../node_modules/.pnpm/@capacitor+keyboard@5.0.6_@capacitor+core@5.4.0/node_modules/@capacitor/keyboard'
+  pod 'CapacitorStatusBar', :path => '../../node_modules/.pnpm/@capacitor+status-bar@5.0.6_@capacitor+core@5.4.0/node_modules/@capacitor/status-bar'
+  pod 'CapacitorIosAutofillSavePassword', :path => '../../node_modules/.pnpm/capacitor-ios-autofill-save-password@1.1.5_@capacitor+core@5.4.0/node_modules/capacitor-ios-autofill-save-password'
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
 end
 
