--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@ionic/react-router": "^7.4.0",
         "@tailwindcss/forms": "^0.5.6",
         "@tanstack/react-query": "^4.35.3",
+        "@vercel/analytics": "^1.0.2",
         "axios": "^1.5.0",
         "capacitor-ios-autofill-save-password": "^1.1.5",
         "chart.js": "^4.4.0",
