--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "tailwindcss": "^3.3.3",
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
+        "vite-plugin-pwa": "^0.16.5",
         "vite-plugin-svgr": "3.2.0",
         "vite-tsconfig-paths": "^4.2.1"
     }
