--- a/apps/bp-track/package.json
+++ b/apps/bp-track/package.json
@@ -21,56 +21,56 @@
         "@awesome-cordova-plugins/core": "^6.4.0",
         "@awesome-cordova-plugins/in-app-purchase-2": "^6.4.0",
         "@capacitor-community/barcode-scanner": "^4.0.1",
-        "@capacitor-firebase/app": "^5.1.0",
-        "@capacitor-firebase/authentication": "^5.1.0",
-        "@capacitor/android": "5.4.0",
+        "@capacitor-firebase/app": "^5.2.0",
+        "@capacitor-firebase/authentication": "^5.2.0",
+        "@capacitor/android": "5.5.1",
         "@capacitor/app": "5.0.6",
         "@capacitor/camera": "^5.0.7",
-        "@capacitor/core": "5.4.0",
+        "@capacitor/core": "5.5.1",
         "@capacitor/filesystem": "^5.1.4",
         "@capacitor/haptics": "5.0.6",
-        "@capacitor/ios": "^5.4.0",
+        "@capacitor/ios": "^5.5.1",
         "@capacitor/keyboard": "^5.0.6",
         "@capacitor/status-bar": "^5.0.6",
         "@headlessui/react": "^1.7.17",
-        "@ionic/react": "^7.4.0",
-        "@ionic/react-router": "^7.4.0",
+        "@ionic/react": "^7.5.3",
+        "@ionic/react-router": "^7.5.3",
         "@tailwindcss/forms": "^0.5.6",
-        "@tanstack/react-query": "^4.35.3",
-        "@vercel/analytics": "^1.0.2",
-        "axios": "^1.5.0",
+        "@tanstack/react-query": "^4.36.1",
+        "@vercel/analytics": "^1.1.1",
+        "axios": "^1.6.0",
         "capacitor-ios-autofill-save-password": "^1.1.5",
         "chart.js": "^4.4.0",
-        "cordova-plugin-purchase": "^11.0.0",
+        "cordova-plugin-purchase": "^13.9.0",
         "date-fns": "^2.30.0",
-        "firebase": "^10.4.0",
+        "firebase": "^10.5.2",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-router": "5.3.4",
         "react-router-dom": "=5.3.4",
-        "tailwindcss-safe-area": "^0.4.0"
+        "tailwindcss-safe-area": "^0.4.1"
     },
     "devDependencies": {
-        "@capacitor/cli": "5.4.0",
-        "@types/node": "^18.17.17",
-        "@types/react": "^18.2.22",
-        "@types/react-dom": "^18.2.7",
+        "@capacitor/cli": "5.5.1",
+        "@types/node": "^18.18.8",
+        "@types/react": "^18.2.34",
+        "@types/react-dom": "^18.2.14",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
-        "@vitejs/plugin-react-swc": "^3.3.2",
-        "autoprefixer": "^10.4.15",
-        "eslint": "^8.49.0",
+        "@vitejs/plugin-react-swc": "^3.4.1",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.52.0",
         "eslint-config-react-app": "^7.0.1",
-        "postcss": "^8.4.30",
+        "postcss": "^8.4.31",
         "prettier": "^3.0.3",
-        "prettier-plugin-tailwindcss": "^0.5.4",
-        "sass": "^1.67.0",
-        "tailwindcss": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.5.6",
+        "sass": "^1.69.5",
+        "tailwindcss": "^3.3.5",
         "typescript": "^5.2.2",
-        "vite": "^4.4.9",
-        "vite-plugin-pwa": "^0.16.5",
-        "vite-plugin-svgr": "3.2.0",
+        "vite": "^4.5.0",
+        "vite-plugin-pwa": "^0.16.6",
+        "vite-plugin-svgr": "^4.1.0",
         "vite-tsconfig-paths": "^4.2.1"
     }
 }
