--- a/apps/workout-track/public/manifest.json
+++ b/apps/workout-track/public/manifest.json
@@ -13,6 +13,12 @@
             "sizes": "512x512 144x144",
             "purpose": "maskable"
         }
+        {
+            "src": "assets/icon/icon.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "any"
+        }
     ],
     "start_url": ".",
     "display": "standalone",
