--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.1",
     "date-fns": "^2.30.0",
     "next": "^14.0.0",
