--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^4.26.2",
     "@fitness/api-legacy": "workspace:*",
     "@fitness/types": "workspace:*",
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
