--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -25,9 +25,11 @@
     "@trpc/server": "^10.37.1",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "next": "^14.0.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
