--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,14 @@ google-services.json
 
 # Turbo Repo
 .turbo
+
+# PWA
+**/public/precache.*.*.js
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/fallback-*.js
+**/public/precache.*.*.js.map
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
