--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@vercel/analytics": "^1.1.1",
+    "@zxing/library": "^0.20.0",
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
@@ -32,6 +33,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-webcam": "^7.2.0",
     "superjson": "^1.13.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
