--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -23,6 +23,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@uploadthing/react": "^5.7.0",
     "@vercel/analytics": "^1.1.1",
     "@zxing/library": "^0.20.0",
     "axios": "^1.6.1",
@@ -31,10 +32,12 @@
     "next": "^14.0.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-camera-pro": "^1.3.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-webcam": "^7.2.0",
     "superjson": "^1.13.1",
+    "uploadthing": "^5.7.4",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
