--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.6.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "dotenv-cli": "^6.0.0",
     "prisma": "^5.6.0",
     "typescript": "^5.2.2"
