--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -6,7 +6,7 @@
     "with-env": "dotenv -e ../../.env --",
     "build": "pnpm with-env next build",
     "dev": "pnpm with-env next dev",
-    "lint": "next lint",
+    "lint": "pnpm with-env next lint",
     "start": "next start"
   },
   "dependencies": {
