--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -15,6 +15,7 @@
     "@fitness/api-legacy": "workspace:*",
     "@fitness/types": "workspace:*",
     "@headlessui/react": "^1.7.17",
+    "@khmyznikov/pwa-install": "^0.2.7",
     "@prisma/client": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
