--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
         "@fitness/db": "*",
         "@trpc/client": "^10.44.1",
         "@trpc/server": "^10.44.1",
+        "axios": "^1.6.2",
         "uuid": "^9.0.1",
         "next": "^14.0.3",
         "superjson": "^2.2.1",
