--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "clean": "rm -rf .turbo node_modules",
         "with-env": "dotenv -e ../../.env --",
-        "dev": "pnpm with-env prisma studio --port 5556",
+        "__dev": "pnpm with-env prisma studio --port 5556",
         "db-push": "pnpm with-env prisma db push",
         "db-pull": "pnpm with-env prisma db pull",
         "db-generate": "pnpm with-env prisma generate"
