--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@clerk/nextjs": "^4.27.2",
         "@fitness/db": "*",
+        "@fitness/types": "*",
         "@trpc/client": "^10.44.1",
         "@trpc/server": "^10.44.1",
         "axios": "^1.6.2",
