--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,7 @@
         "clean": "rm -rf .turbo node_modules",
         "with-env": "dotenv -e ../../.env --",
         "__dev": "pnpm with-env prisma studio --port 5556",
-        "db-push": "pnpm with-env prisma db push",
+        "db-push": "pnpm with-env prisma db push --accept-data-loss",
         "db-pull": "pnpm with-env prisma db pull",
         "db-generate": "pnpm with-env prisma generate"
     },
