--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -22,8 +22,8 @@
         "@trpc/next": "^10.44.1",
         "@trpc/react-query": "^10.44.1",
         "@trpc/server": "^10.44.1",
-        "@uploadthing/react": "^6.0.2",
         "@vercel/analytics": "^1.1.1",
+        "@vercel/blob": "^0.16.1",
         "@zxing/library": "^0.20.0",
         "axios": "^1.6.2",
         "chart.js": "^4.4.1",
@@ -36,7 +36,6 @@
         "react-dom": "18.2.0",
         "react-webcam": "^7.2.0",
         "superjson": "^2.2.1",
-        "uploadthing": "^6.1.0",
         "uuid": "^9.0.1",
         "zod": "^3.22.4"
     },
