--- a/apps/blood-pressure/package.json
+++ b/apps/blood-pressure/package.json
@@ -16,6 +16,7 @@
         "@headlessui/react": "^1.7.17",
         "@khmyznikov/pwa-install": "^0.2.7",
         "@prisma/client": "^5.7.0",
+        "@heroicons/react": "^2.1.1",
         "@t3-oss/env-nextjs": "^0.7.1",
         "@tanstack/react-query": "^4.36.1",
         "@trpc/client": "^10.44.1",
