--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
         "react": "^18.2.0"
     },
     "devDependencies": {
+        "@fitness/tailwind-config": "workspace:*",
         "@types/react": "^18.2.45",
         "eslint": "^8.56.0",
         "tailwindcss": "^3.4.0",
