--- a/apps/blood-pressure/package.json
+++ b/apps/blood-pressure/package.json
@@ -30,6 +30,7 @@
         "framer-motion": "^10.17.9",
         "next": "^14.0.4",
         "next-pwa": "^5.6.0",
+        "next-themes": "^0.2.1",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "18.2.0",
