--- a/apps/body/package.json
+++ b/apps/body/package.json
@@ -15,9 +15,9 @@
         "@fitness/types": "workspace:*",
         "@fitness/ui": "workspace:*",
         "@headlessui/react": "^1.7.17",
-        "@khmyznikov/pwa-install": "^0.2.7",
-        "@prisma/client": "^5.7.0",
         "@heroicons/react": "^2.1.1",
+        "@nextui-org/react": "^2.2.9",
+        "@prisma/client": "^5.7.0",
         "@t3-oss/env-nextjs": "^0.7.1",
         "@tanstack/react-query": "^4.36.1",
         "@trpc/client": "^10.44.1",
@@ -25,18 +25,15 @@
         "@trpc/react-query": "^10.44.1",
         "@trpc/server": "^10.44.1",
         "@vercel/analytics": "^1.1.1",
-        "@vercel/blob": "^0.16.1",
-        "@zxing/library": "^0.20.0",
-        "axios": "^1.6.2",
         "chart.js": "^4.4.1",
         "date-fns": "^2.30.0",
+        "framer-motion": "^10.17.9",
         "next": "^14.0.4",
         "next-pwa": "^5.6.0",
+        "next-themes": "^0.2.1",
         "react": "18.2.0",
-        "react-camera-pro": "^1.3.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "18.2.0",
-        "react-webcam": "^7.2.0",
         "superjson": "^2.2.1",
         "uuid": "^9.0.1",
         "zod": "^3.22.4"
