--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -1,34 +1,67 @@
 {
-  "name": "tailwindui-salient",
+  "name": "main",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "with-env": "dotenv -e ../../.env --",
+    "build": "pnpm with-env next build",
+    "dev": "pnpm with-env next dev --port 3000",
+    "lint": "pnpm with-env next lint",
+    "start": "next start"
   },
-  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@clerk/nextjs": "^4.28.1",
+    "@fitness/api": "workspace:*",
+    "@fitness/types": "workspace:*",
+    "@fitness/ui": "workspace:*",
     "@headlessui/react": "^1.7.17",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "^10.4.12",
-    "clsx": "^1.2.1",
-    "next": "13.4.16",
+    "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.7.0",
+    "@t3-oss/env-nextjs": "^0.7.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.44.1",
+    "@trpc/next": "^10.44.1",
+    "@trpc/react-query": "^10.44.1",
+    "@trpc/server": "^10.44.1",
+    "@vercel/analytics": "^1.1.1",
+    "chart.js": "^4.4.1",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.17.9",
+    "next": "^14.0.4",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6"
+    "superjson": "^2.2.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.16",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.5.2",
-    "sharp": "^0.32.0"
-  }
+    "@fitness/eslint-config": "workspace:*",
+    "@fitness/prettier-config": "workspace:*",
+    "@fitness/tailwind-config": "workspace:*",
+    "@fitness/tsconfig": "workspace:*",
+    "@types/eslint": "^8.44.9",
+    "@types/node": "^18.18.13",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^7.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6",
+    "tailwindcss-safe-area": "^0.4.1",
+    "typescript": "^5.3.3"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.23.1"
+  },
+  "packageManager": "pnpm@8.11.0"
 }
