--- a/apps/macro/package.json
+++ b/apps/macro/package.json
@@ -25,6 +25,7 @@
         "@trpc/react-query": "^10.44.1",
         "@trpc/server": "^10.44.1",
         "@vercel/analytics": "^1.1.1",
+        "@zxing/library": "^0.20.0",
         "chart.js": "^4.4.1",
         "date-fns": "^2.30.0",
         "framer-motion": "^10.17.9",
@@ -34,6 +35,7 @@
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "18.2.0",
+        "react-webcam": "^7.2.0",
         "superjson": "^2.2.1",
         "uuid": "^9.0.1",
         "zod": "^3.22.4"
