--- a/apps/body/package.json
+++ b/apps/body/package.json
@@ -5,30 +5,31 @@
     "scripts": {
         "with-env": "dotenv -e ../../.env --",
         "build": "pnpm with-env next build",
-        "dev": "pnpm with-env next dev --port 4000",
+        "dev": "pnpm with-env next dev --port 3001",
         "lint": "pnpm with-env next lint",
         "start": "next start"
     },
     "dependencies": {
-        "@clerk/nextjs": "^4.29.3",
+        "@clerk/nextjs": "^4.29.4",
         "@fitness/api": "workspace:*",
         "@fitness/types": "workspace:*",
         "@fitness/ui": "workspace:*",
-        "@headlessui/react": "^1.7.17",
+        "@headlessui/react": "^1.7.18",
         "@heroicons/react": "^2.1.1",
         "@nextui-org/react": "^2.2.9",
-        "@prisma/client": "^5.7.0",
-        "@t3-oss/env-nextjs": "^0.7.1",
+        "@prisma/client": "^5.8.1",
+        "@t3-oss/env-nextjs": "^0.7.3",
         "@tanstack/react-query": "^4.36.1",
-        "@trpc/client": "^10.44.1",
-        "@trpc/next": "^10.44.1",
-        "@trpc/react-query": "^10.44.1",
-        "@trpc/server": "^10.44.1",
-        "@vercel/analytics": "^1.1.1",
+        "@trpc/client": "^10.45.0",
+        "@trpc/next": "^10.45.0",
+        "@trpc/react-query": "^10.45.0",
+        "@trpc/server": "^10.45.0",
+        "@vercel/analytics": "^1.1.2",
+        "@vercel/blob": "^0.19.0",
         "chart.js": "^4.4.1",
-        "date-fns": "^2.30.0",
-        "framer-motion": "^10.17.9",
-        "next": "^14.0.4",
+        "date-fns": "^3.3.0",
+        "framer-motion": "^10.18.0",
+        "next": "^14.1.0",
         "next-pwa": "^5.6.0",
         "next-themes": "^0.2.1",
         "react": "18.2.0",
@@ -43,25 +44,25 @@
         "@fitness/prettier-config": "workspace:*",
         "@fitness/tailwind-config": "workspace:*",
         "@fitness/tsconfig": "workspace:*",
-        "@types/eslint": "^8.44.9",
-        "@types/node": "^18.18.13",
-        "@types/react": "^18.2.45",
+        "@types/eslint": "^8.56.2",
+        "@types/node": "^18.19.8",
+        "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
         "@types/uuid": "^9.0.7",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "autoprefixer": "^10.4.16",
+        "@typescript-eslint/eslint-plugin": "^6.19.0",
+        "@typescript-eslint/parser": "^6.19.0",
+        "autoprefixer": "^10.4.17",
         "dotenv-cli": "^7.3.0",
         "eslint": "^8.56.0",
-        "eslint-config-next": "^14.0.4",
-        "postcss": "^8.4.32",
-        "prettier": "^3.1.1",
-        "tailwindcss": "^3.3.6",
+        "eslint-config-next": "^14.1.0",
+        "postcss": "^8.4.33",
+        "prettier": "^3.2.4",
+        "tailwindcss": "^3.4.1",
         "tailwindcss-safe-area": "^0.4.1",
         "typescript": "^5.3.3"
     },
     "ct3aMetadata": {
         "initVersion": "7.23.1"
     },
-    "packageManager": "pnpm@8.11.0"
+    "packageManager": "pnpm@8.14.1"
 }
